chartmuseum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum
spec:
  selector:
    app: chartmuseum
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: LoadBalancer
